@@ -6,6 +6,7 @@
 		- Added position overloads for play_one_clip
 			play_one_audio_clip_source_at_position(source, pos)
 			play_one_audio_clip_at_position(path, pos)
+		- Implemented volume control with player->volume
 	- Renderer
 		- Added draw_line(p0, p1, width, color)
 		- Implemented culling of quads out of view
